--- a/032/requirements.txt
+++ b/032/requirements.txt
@@ -1,7 +1,3 @@
-click==6.7
-Flask==0.12.1
-Flask-JSGlue==0.3.1
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-Werkzeug==0.12.1
+click
+Flask
+Flask-JSGlue
